Some test progress in attributes area.

--- a/test/Lucene.Net Tests.csproj
+++ b/test/Lucene.Net Tests.csproj
@@ -142,9 +142,233 @@
     <Compile Include="core\Document\TestDateTools.cs" />
     <Compile Include="core\Document\TestDocument.cs" />
     <Compile Include="core\Document\TestField.cs" />
+    <Compile Include="core\Index\BinaryTokenStream.cs" />
+    <Compile Include="core\Index\Test2BBinaryDocValues.cs" />
+    <Compile Include="core\Index\Test2BDocs.cs" />
+    <Compile Include="core\Index\Test2BNumericDocValues.cs" />
+    <Compile Include="core\Index\Test2BPositions.cs" />
+    <Compile Include="core\Index\Test2BPostings.cs" />
+    <Compile Include="core\Index\Test2BPostingsBytes.cs" />
+    <Compile Include="core\Index\Test2BSortedDocValues.cs" />
+    <Compile Include="core\Index\Test2BTerms.cs" />
+    <Compile Include="core\Index\Test4GBStoredFields.cs" />
+    <Compile Include="core\Index\TestAllFilesHaveChecksumFooter.cs" />
+    <Compile Include="core\Index\TestAllFilesHaveCodecHeader.cs" />
+    <Compile Include="core\Index\TestAtomicUpdate.cs" />
+    <Compile Include="core\Index\TestBinaryTerms.cs" />
+    <Compile Include="core\Index\TestByteSlices.cs" />
+    <Compile Include="core\Index\TestCheckIndex.cs" />
+    <Compile Include="core\Index\TestCodecHoldsOpenFiles.cs" />
+    <Compile Include="core\Index\TestConsistentFieldNumbers.cs" />
+    <Compile Include="core\Index\TestCrash.cs" />
+    <Compile Include="core\Index\TestCrashCausesCorruptIndex.cs" />
+    <Compile Include="core\Index\TestCustomNorms.cs" />
+    <Compile Include="core\Index\TestDeletionPolicy.cs" />
+    <Compile Include="core\Index\TestDirectoryReader.cs" />
+    <Compile Include="core\Index\TestDirectoryReaderReopen.cs" />
+    <Compile Include="core\Index\TestDocCount.cs" />
+    <Compile Include="core\Index\TestDocInverterPerFieldErrorInfo.cs" />
+    <Compile Include="core\Index\TestDocsAndPositions.cs" />
+    <Compile Include="core\Index\TestDocTermOrds.cs" />
+    <Compile Include="core\Index\TestDocumentWriter.cs" />
+    <Compile Include="core\Index\TestDocValuesFormat.cs" />
+    <Compile Include="core\Index\TestDocValuesIndexing.cs" />
+    <Compile Include="core\Index\TestDocValuesWithThreads.cs" />
+    <Compile Include="core\Index\TestDuelingCodecs.cs" />
+    <Compile Include="core\Index\TestExceedMaxTermLength.cs" />
+    <Compile Include="core\Index\TestFieldInfos.cs" />
+    <Compile Include="core\Index\TestFieldsReader.cs" />
+    <Compile Include="core\Index\TestFlex.cs" />
+    <Compile Include="core\Index\TestForTooMuchCloning.cs" />
+    <Compile Include="core\Index\TestIndexCommit.cs" />
+    <Compile Include="core\Index\TestIndexFileDeleter.cs" />
+    <Compile Include="core\Index\TestIndexInput.cs" />
+    <Compile Include="core\Index\TestIndexReaderClose.cs" />
+    <Compile Include="core\Index\TestIndexWriterLockRelease.cs" />
+    <Compile Include="core\Index\TestIndexWriterMergePolicy.cs" />
+    <Compile Include="core\Index\TestIndexWriterMerging.cs" />
+    <Compile Include="core\Index\TestIndexWriterNRTIsCurrent.cs" />
+    <Compile Include="core\Index\TestIndexWriterOutOfFileDescriptors.cs" />
+    <Compile Include="core\Index\TestIndexWriterReader.cs" />
+    <Compile Include="core\Index\TestIndexWriterWithThreads.cs" />
+    <Compile Include="core\Index\TestIntBlockPool.cs" />
+    <Compile Include="core\Index\TestIsCurrent.cs" />
+    <Compile Include="core\Index\TestLazyProxSkipping.cs" />
+    <Compile Include="core\Index\TestLogMergePolicy.cs" />
+    <Compile Include="core\Index\TestLongPostings.cs" />
+    <Compile Include="core\Index\TestMaxTermFrequency.cs" />
+    <Compile Include="core\Index\TestMixedCodecs.cs" />
+    <Compile Include="core\Index\TestMultiDocValues.cs" />
+    <Compile Include="core\Index\TestMultiFields.cs" />
+    <Compile Include="core\Index\TestMultiLevelSkipList.cs" />
+    <Compile Include="core\Index\TestNeverDelete.cs" />
+    <Compile Include="core\Index\TestNewestSegment.cs" />
+    <Compile Include="core\Index\TestNorms.cs" />
+    <Compile Include="core\Index\TestNRTReaderWithThreads.cs" />
+    <Compile Include="core\Index\TestNRTThreads.cs" />
+    <Compile Include="core\Index\TestOmitNorms.cs" />
+    <Compile Include="core\Index\TestOmitPositions.cs" />
+    <Compile Include="core\Index\TestOmitTf.cs" />
+    <Compile Include="core\Index\TestParallelAtomicReader.cs" />
+    <Compile Include="core\Index\TestParallelCompositeReader.cs" />
+    <Compile Include="core\Index\TestParallelReaderEmptyIndex.cs" />
+    <Compile Include="core\Index\TestParallelTermEnum.cs" />
+    <Compile Include="core\Index\TestPayloads.cs" />
+    <Compile Include="core\Index\TestPayloadsOnVectors.cs" />
+    <Compile Include="core\Index\TestPerSegmentDeletes.cs" />
+    <Compile Include="core\Index\TestPostingsFormat.cs" />
+    <Compile Include="core\Index\TestPostingsOffsets.cs" />
+    <Compile Include="core\Index\TestPrefixCodedTerms.cs" />
+    <Compile Include="core\Index\TestReaderClosed.cs" />
+    <Compile Include="core\Index\TestRollback.cs" />
+    <Compile Include="core\Index\TestSameTokenSamePosition.cs" />
+    <Compile Include="core\Index\TestSegmentMerger.cs" />
+    <Compile Include="core\Index\TestSegmentReader.cs" />
+    <Compile Include="core\Index\TestSegmentTermDocs.cs" />
+    <Compile Include="core\Index\TestSegmentTermEnum.cs" />
+    <Compile Include="core\Index\TestSizeBoundedForceMerge.cs" />
+    <Compile Include="core\Index\TestStoredFieldsFormat.cs" />
+    <Compile Include="core\Index\TestStressAdvance.cs" />
+    <Compile Include="core\Index\TestStressIndexing.cs" />
+    <Compile Include="core\Index\TestStressIndexing2.cs" />
+    <Compile Include="core\Index\TestStressNRT.cs" />
+    <Compile Include="core\Index\TestSumDocFreq.cs" />
+    <Compile Include="core\Index\TestTerm.cs" />
+    <Compile Include="core\Index\TestTermdocPerf.cs" />
+    <Compile Include="core\Index\TestTermsEnum.cs" />
+    <Compile Include="core\Index\TestTermsEnum2.cs" />
+    <Compile Include="core\Index\TestTermVectorsFormat.cs" />
+    <Compile Include="core\Index\TestTermVectorsReader.cs" />
+    <Compile Include="core\Index\TestTermVectorsWriter.cs" />
+    <Compile Include="core\Index\TestThreadedForceMerge.cs" />
+    <Compile Include="core\Index\TestTieredMergePolicy.cs" />
+    <Compile Include="core\Index\TestTransactionRollback.cs" />
+    <Compile Include="core\Index\TestTransactions.cs" />
+    <Compile Include="core\Index\TestTryDelete.cs" />
+    <Compile Include="core\Index\TestTwoPhaseCommitTool.cs" />
     <Compile Include="core\RectangularArrays.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="core\Search\BaseTestRangeFilter.cs" />
+    <Compile Include="core\Search\FuzzyTermOnShortTermsTest.cs" />
+    <Compile Include="core\Search\JustCompileSearch.cs" />
+    <Compile Include="core\Search\MockFilter.cs" />
+    <Compile Include="core\Search\MultiCollectorTest.cs" />
+    <Compile Include="core\Search\Payloads\PayloadHelper.cs" />
+    <Compile Include="core\Search\Payloads\TestPayloadExplanations.cs" />
+    <Compile Include="core\Search\Payloads\TestPayloadNearQuery.cs" />
+    <Compile Include="core\Search\Payloads\TestPayloadTermQuery.cs" />
+    <Compile Include="core\Search\Similarities\TestSimilarity2.cs" />
+    <Compile Include="core\Search\Similarities\TestSimilarityBase.cs" />
+    <Compile Include="core\Search\SingleDocTestFilter.cs" />
+    <Compile Include="core\Search\Spans\JustCompileSearchSpans.cs" />
+    <Compile Include="core\Search\Spans\MultiSpansWrapper.cs" />
+    <Compile Include="core\Search\Spans\TestBasics.cs" />
+    <Compile Include="core\Search\Spans\TestFieldMaskingSpanQuery.cs" />
+    <Compile Include="core\Search\Spans\TestNearSpansOrdered.cs" />
+    <Compile Include="core\Search\Spans\TestPayloadSpans.cs" />
+    <Compile Include="core\Search\Spans\TestSpanExplanations.cs" />
+    <Compile Include="core\Search\Spans\TestSpanExplanationsOfNonMatches.cs" />
+    <Compile Include="core\Search\Spans\TestSpanFirstQuery.cs" />
+    <Compile Include="core\Search\Spans\TestSpanMultiTermQueryWrapper.cs" />
+    <Compile Include="core\Search\Spans\TestSpans.cs" />
+    <Compile Include="core\Search\Spans\TestSpansAdvanced.cs" />
+    <Compile Include="core\Search\Spans\TestSpansAdvanced2.cs" />
+    <Compile Include="core\Search\Spans\TestSpanSearchEquivalence.cs" />
+    <Compile Include="core\Search\TestAutomatonQuery.cs" />
+    <Compile Include="core\Search\TestAutomatonQueryUnicode.cs" />
+    <Compile Include="core\Search\TestBoolean2.cs" />
+    <Compile Include="core\Search\TestBooleanOr.cs" />
+    <Compile Include="core\Search\TestBooleanQueryVisitSubscorers.cs" />
+    <Compile Include="core\Search\TestBooleanScorer.cs" />
+    <Compile Include="core\Search\TestCachingCollector.cs" />
+    <Compile Include="core\Search\TestCachingWrapperFilter.cs" />
+    <Compile Include="core\Search\TestComplexExplanations.cs" />
+    <Compile Include="core\Search\TestComplexExplanationsOfNonMatches.cs" />
+    <Compile Include="core\Search\TestConjunctions.cs" />
+    <Compile Include="core\Search\TestConstantScoreQuery.cs" />
+    <Compile Include="core\Search\TestCustomSearcherSort.cs" />
+    <Compile Include="core\Search\TestDateFilter.cs" />
+    <Compile Include="core\Search\TestDateSort.cs" />
+    <Compile Include="core\Search\TestDocBoost.cs" />
+    <Compile Include="core\Search\TestDocIdSet.cs" />
+    <Compile Include="core\Search\TestDocTermOrdsRangeFilter.cs" />
+    <Compile Include="core\Search\TestDocTermOrdsRewriteMethod.cs" />
+    <Compile Include="core\Search\TestDocValuesScoring.cs" />
+    <Compile Include="core\Search\TestEarlyTermination.cs" />
+    <Compile Include="core\Search\TestElevationComparator.cs" />
+    <Compile Include="core\Search\TestExplanations.cs" />
+    <Compile Include="core\Search\TestFieldCacheRangeFilter.cs" />
+    <Compile Include="core\Search\TestFieldCacheRewriteMethod.cs" />
+    <Compile Include="core\Search\TestFieldCacheTermsFilter.cs" />
+    <Compile Include="core\Search\TestFieldValueFilter.cs" />
+    <Compile Include="core\Search\TestFilteredQuery.cs" />
+    <Compile Include="core\Search\TestFilteredSearch.cs" />
+    <Compile Include="core\Search\TestFuzzyQuery.cs" />
+    <Compile Include="core\Search\TestLiveFieldValues.cs" />
+    <Compile Include="core\Search\TestMatchAllDocsQuery.cs" />
+    <Compile Include="core\Search\TestMultiPhraseQuery.cs" />
+    <Compile Include="core\Search\TestMultiTermConstantScore.cs" />
+    <Compile Include="core\Search\TestMultiTermQueryRewrites.cs" />
+    <Compile Include="core\Search\TestMultiThreadTermVectors.cs" />
+    <Compile Include="core\Search\TestNGramPhraseQuery.cs" />
+    <Compile Include="core\Search\TestNot.cs" />
+    <Compile Include="core\Search\TestPhrasePrefixQuery.cs" />
+    <Compile Include="core\Search\TestPhraseQuery.cs" />
+    <Compile Include="core\Search\TestPositionIncrement.cs" />
+    <Compile Include="core\Search\TestPositiveScoresOnlyCollector.cs" />
+    <Compile Include="core\Search\TestPrefixFilter.cs" />
+    <Compile Include="core\Search\TestPrefixInBooleanQuery.cs" />
+    <Compile Include="core\Search\TestPrefixQuery.cs" />
+    <Compile Include="core\Search\TestPrefixRandom.cs" />
+    <Compile Include="core\Search\TestQueryRescorer.cs" />
+    <Compile Include="core\Search\TestQueryWrapperFilter.cs" />
+    <Compile Include="core\Search\TestRegexpQuery.cs" />
+    <Compile Include="core\Search\TestRegexpRandom2.cs" />
+    <Compile Include="core\Search\TestSameScoresWithThreads.cs" />
+    <Compile Include="core\Search\TestScoreCachingWrappingScorer.cs" />
+    <Compile Include="core\Search\TestScorerPerf.cs" />
+    <Compile Include="core\Search\TestSearchAfter.cs" />
+    <Compile Include="core\Search\TestSearchWithThreads.cs" />
+    <Compile Include="core\Search\TestShardSearching.cs" />
+    <Compile Include="core\Search\TestSimilarity.cs" />
+    <Compile Include="core\Search\TestSimilarityProvider.cs" />
+    <Compile Include="core\Search\TestSimpleExplanations.cs" />
+    <Compile Include="core\Search\TestSimpleExplanationsOfNonMatches.cs" />
+    <Compile Include="core\Search\TestSimpleSearchEquivalence.cs" />
+    <Compile Include="core\Search\TestSloppyPhraseQuery.cs" />
+    <Compile Include="core\Search\TestSloppyPhraseQuery2.cs" />
+    <Compile Include="core\Search\TestSort.cs" />
+    <Compile Include="core\Search\TestSortDocValues.cs" />
+    <Compile Include="core\Search\TestSortRandom.cs" />
+    <Compile Include="core\Search\TestSortRescorer.cs" />
+    <Compile Include="core\Search\TestSubScorerFreqs.cs" />
+    <Compile Include="core\Search\TestTermRangeFilter.cs" />
+    <Compile Include="core\Search\TestTermRangeQuery.cs" />
+    <Compile Include="core\Search\TestTermScorer.cs" />
+    <Compile Include="core\Search\TestTermVectors.cs" />
+    <Compile Include="core\Search\TestTopDocsCollector.cs" />
+    <Compile Include="core\Search\TestTopDocsMerge.cs" />
+    <Compile Include="core\Search\TestTopFieldCollector.cs" />
+    <Compile Include="core\Search\TestTopScoreDocCollector.cs" />
+    <Compile Include="core\Search\TestTotalHitCountCollector.cs" />
+    <Compile Include="core\Search\TestWildcard.cs" />
+    <Compile Include="core\Store\TestBufferedChecksum.cs" />
+    <Compile Include="core\Store\TestBufferedIndexInput.cs" />
+    <Compile Include="core\Store\TestByteArrayDataInput.cs" />
+    <Compile Include="core\Store\TestCopyBytes.cs" />
+    <Compile Include="core\Store\TestDirectory.cs" />
+    <Compile Include="core\Store\TestFileSwitchDirectory.cs" />
+    <Compile Include="core\Store\TestFilterDirectory.cs" />
+    <Compile Include="core\Store\TestHugeRamFile.cs" />
+    <Compile Include="core\Store\TestLock.cs" />
+    <Compile Include="core\Store\TestLockFactory.cs" />
+    <Compile Include="core\Store\TestMockDirectoryWrapper.cs" />
+    <Compile Include="core\Store\TestMultiMMap.cs" />
+    <Compile Include="core\Store\TestNRTCachingDirectory.cs" />
+    <Compile Include="core\Store\TestRAMDirectory.cs" />
+    <Compile Include="core\Store\TestRateLimiter.cs" />
+    <Compile Include="core\Store\TestWindowsMMap.cs" />
     <Compile Include="core\SupportClassException.cs">
       <SubType>Code</SubType>
     </Compile>
