--- a/test/Lucene.Net Tests.csproj
+++ b/test/Lucene.Net Tests.csproj
@@ -786,6 +786,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="core\Lucene.Net.Test.csproj" />
+    <Content Include="lib\ICSharpCode.SharpZipLib.dll" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="core\Util\Junitcompat\" />
