--- a/src/Lucene.Net.Core/project.json
+++ b/src/Lucene.Net.Core/project.json
@@ -1,7 +1,8 @@
 ﻿{
+    "licenses": ["apache 2.0"],
     "dependencies": {
     },
-
+    "license": "apache 2.0",
     "configurations" : {
         "net451" : { 
             "dependencies": {
