Fix the endian read/writes in memorymappedFileByteBuffer

--- a/Lucene.Net.csproj
+++ b/Lucene.Net.csproj
@@ -6,7 +6,7 @@
     <ProjectGuid>{9B06B39D-9B24-45D3-AB54-87F3A0DB7735}</ProjectGuid>
     <OutputType>Library</OutputType>
     <NoStandardLibraries>false</NoStandardLibraries>
-    <AssemblyName>ConsoleApplication</AssemblyName>
+    <AssemblyName>Lucene.Net</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
