Changing Check into an internal class, adding interfaces IAccountable, IAttribute, IBits. Adding and testing MarkAllBits and MarkNoBits. Adding initial placeholder for porting guidance.

--- a/src/Lucene.Net.Core/Lucene.Net.Core.csproj
+++ b/src/Lucene.Net.Core/Lucene.Net.Core.csproj
@@ -66,6 +66,10 @@
     <Compile Include="Support\ShallowCloneNotSupportedException.cs" />
     <Compile Include="Support\StringExtensionMethods.cs" />
     <Compile Include="Support\SupportExtensionMethods.cs" />
+    <Compile Include="Util\Bits.cs" />
+    <Compile Include="Util\IAccountable.cs" />
+    <Compile Include="Util\IAttribute.cs" />
+    <Compile Include="Util\IBits.cs" />
     <Compile Include="Util\Version.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
